# clear_ai

./: .gitignore  BUILD.md  ClearAI v5 design.html  CustomsAIUnifiedBrief_SP.html  HANDOVER.md  README.md  SPA_MIGRATION_PR1_BATCHES_RENAME.md  SPA_MIGRATION_PR3_HIERARCHY.md  TASKS.md  Untitled-2026-04-14-0559.excalidraw  naqel-customs-flow.excalidraw  v0-architecture-diagram.excalidraw  v1-ai-flow-diagram.excalidraw
clearai-backend/: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  LOCAL-DEV.md  README.md  config.py  docker-compose.full.yml  docker-compose.yml  drizzle.config.ts  hs_resolver.py  invoice_parser.py  lookup_engine.py  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.test.json  vitest.config.ts
clearai-backend/api/: __init__.py  deps.py  main.py  routes_batch.py  schemas.py
clearai-backend/clearai/: __init__.py  config.py
clearai-backend/cli/: __init__.py  batch_xml.py
clearai-backend/data/: README.md  procedure-codes.csv  saber-deleted-codes.csv
clearai-backend/db/: __init__.py  build_faiss.py
clearai-backend/drizzle/: 0000_nifty_bloodstorm.sql  0001_indexes_triggers.sql  0002_hardening.sql  0003_v2_stateless.sql  0004_setup_meta_backfill.sql  0005_alternatives_floor.sql  0006_branch_enumeration.sql  0007_merchant_cleanup.sql  0008_branch_rank.sql  0009_alternatives_layered.sql  0010_submission_description.sql  0011_classification_feedback.sql  0012_broker_code_mapping.sql  0013_broker_mapping_flag.sql  0014_heading_level_match.sql  0015_research_web.sql  0016_event_rationale.sql  0017_procedure_codes.sql  0018_procedure_codes_seed.sql  0019_role_separation.sql  0020_pii_redaction.sql  0021_hs_codes_deletion.sql  0022_hs_codes_deletion_seed.sql  0023_decision_reason_extension.sql  0024_ancestor_context.sql  0025_setup_meta_cleanup.sql  0026_tenant_code_overrides.sql  0027_hs_code_display.sql  0028_hs_code_search.sql  0029_hs_codes_slim.sql  0030_drop_redundant.sql  0031_procedures_array_duty_struct.sql  0032_uuid_pk_entity_tables.sql  0033_rename_zatca_prefix.sql  0034_setup_meta_dead_keys_cleanup.sql  0035_observability_columns_and_cleanup_rename.sql  0036_drop_chapter_hint.sql  0037_picker_path_mode.sql  0038_tenants.sql  0039_tenant_field_mappings.sql  (+57 more)
clearai-backend/infra/: .gitignore  README.md  bootstrap-entra.sh  deploy.sh  main.bicep  main.dev.bicepparam
clearai-backend/llm/: api_backend.py
clearai-backend/prompts/: best-effort-heading.md  branch-rank.md  chapter-hint.md  description-cleanup.md  gir-system.md  identify-fast.md  identify-web.md  identify.md  merchant-cleanup.md  pick-anchored.md  pick.md  picker-describe.md  picker-expand.md  reconciliation.md  research-input.md  research-with-web.md  sanity.md  submission-description.md
(+802 files in other folders)
