[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearai-app"
version = "0.1.0"
description = "HS code resolution pipeline for Saudi customs (ZATCA Bayan XML)"
requires-python = ">=3.11"
authors = [{ name = "Clear AI" }]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
clearai-setup = "db.setup:main"
clearai-run = "run:main"
clearai-verify = "db.write_verified:main"

[tool.setuptools]
packages = ["llm", "db", "tests"]
py-modules = [
    "config",
    "invoice_parser",
    "hs_resolver",
    "lookup_engine",
    "arabic_translation_engine",
    "xml_builder",
    "comparator",
    "run",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
