[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearai-backend"
version = "0.1.0"
description = "HS code resolution pipeline for Saudi customs (ZATCA Bayan XML)"
requires-python = ">=3.11"
authors = [{ name = "Clear AI" }]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Required by FastAPI for multipart/form-data uploads on /api/batch/upload.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[project.scripts]
clearai-setup = "clearai.data_setup.setup:main"
clearai-build-faiss = "clearai.data_setup.build_faiss:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clearai*", "api*", "cli*"]
exclude = ["tests*", ".venv*", "data*", "output*", "templates*", "tracker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
